Fix z-index tooltip

--- a/src/scss/components/_tooltip.scss
+++ b/src/scss/components/_tooltip.scss
@@ -126,11 +126,10 @@ $tooltip-multiline-sizes: (
         position: absolute;
         content: "";
         pointer-events: none;
-        z-index: 39; 
+        z-index: 38; 
     }
     .tooltip-trigger {
         width: 100%;
-        z-index: 100;
     }
     // Modifiers
     @each $name, $pair in $colors {
